# hello-fbthrift

./: .gitignore  CMakeLists.txt  README.md  hello.thrift
server/: HelloServer.cpp  HelloService.cpp  HelloService.h
